finished AFA case study page

--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -254,7 +254,7 @@
                 <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5">
             </div>
         </div>
-        <div class="accordion accordion-flush mt-5 pt-5" id="accordionFlushExample">
+        <div class="accordion accordion-flush mt-5 pt-5" id="accordionFlush">
             <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -263,7 +263,7 @@
                         </p>
                     </button>
                 </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlush">
                     <div class="accordion-body row col-auto">
                         <p>Hold up champ, more coming soon</p>
                     </div>
@@ -277,7 +277,7 @@
                         </p>
                     </button>
                 </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlush">
                     <div class="accordion-body row col-auto">
                         <p>
                             Hold up champ
@@ -288,16 +288,16 @@
         </div>
     </div>
 
-        <div class="mb-sm-4 UXCaseSwap">
-            <div class="pt-5 pt-sm-0">
-                <p>Previous:</p>
-                <a class="hvr-sweep" href="./UX_VTP.html">Virtual Teaching Platform</a>
-            </div>
-            <div class="pt-4 pt-sm-0">
-                <p>Next:</p>
-                <a class="hvr-sweep" href="./UX_AFA.html">ArtsForAll.com</a>
-            </div>
+    <div class="mb-sm-4 UXCaseSwap">
+        <div class="pt-5 pt-sm-0">
+            <p>Previous:</p>
+            <a class="hvr-sweep" href="./UX_VTP.html">Virtual Teaching Platform</a>
         </div>
+        <div class="pt-4 pt-sm-0">
+            <p>Next:</p>
+            <a class="hvr-sweep" href="./UX_AFA.html">ArtsForAll.com</a>
+        </div>
+    </div>
     </section>
 
     <!-- Footer-->
