--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -95,7 +95,7 @@
     <header class="hero-section home masthead-sub">
         <div class="container px-4 px-lg-5 d-flex h-100 align-items-center">
             <div class="d-flex">
-                <div class="col-sm-auto col-md-8">
+                <div class="col-md-8">
                     <h1 class="col-md-11 my-0 mb-4">Virtual Teaching Platform</h1>
                     <h2 class="col-md-8 mt-2">
                         <p class="mb-2 fw-normal fadeIn-2">
@@ -113,6 +113,7 @@
     <!-- Navigation ###########################-->
     <section class="" style="margin: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
+            <!-- Overview -->
             <div class="UXCaseTeam row gx-0">
                 <div class="text-center col-md-4">
                     <h5>Role</h5>
@@ -138,6 +139,7 @@
                 </div>
             </div>
 
+            <!-- Title -->
             <div class="UXCaseNav row gx-0 mb-5">
                 <a class="hvr-sweep" href="#VTP_Research">Research</a>
                 <a class="hvr-sweep" href="#VTP_Definition">Definition</a>
@@ -192,7 +194,7 @@
     <!-- Definition ##################-->
     <section id="VTP_Definition">
         <div class="container px-4 px-lg-5 d-flex">
-            <div class="">
+            <div class="row">
                 <h6 class="leadingLine text-nav text-muted mb-5">
                     Definition
                 </h6>
@@ -200,7 +202,7 @@
                     Using our research we were able to identify the main problems that teachers face.
                 </h6>
                 <div class="d-flex">
-                    <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-md-5 align-self-end imgSVG">
+                    <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-5 pe-5 align-self-end imgSVG">
                     <div class="col-md-6 align-self-center ms-0 ms-md-5">
                         <p class="">
                             As a team we then decided that our solution for this was to create an all-in-one virtual teaching platform that teachers could use to prepare lessons in a quick and seamless way.
@@ -210,6 +212,7 @@
                         </br>
                     </div>
                 </div>
+                <img src="../assets/img/UX_VTP/UX_VTP_compete.png" alt="Virtual Teaching Platform - Competitor Analysis" class="mt-5 pt-5 col-12 col-md-11 mx-auto">
             </div>
         </div>
     </section>
@@ -225,7 +228,7 @@
                     Using the "I like, I wish, What If" method, we were able to generate ideas that could be used within the app.
                 </h6>
                 <div class="">
-                    <div class="mb-5 col-0 col-md-9 mx-auto">
+                    <div class="mb-5 col-md-9 mx-auto">
                         <p class="">
                             Using those ideas we created a feature priotization matrix, to see which of them were integal to our creation - such as having a gradebook and creating lessons available right on the app.                            
                             </br>
@@ -251,7 +254,7 @@
                     Prototyping
                 </h6>
                 <div class="">
-                    <div class="mb-5 col-0 col-md-9 mx-auto">
+                    <div class="mb-5 col-md-9 mx-auto">
                         <p>
                             We started first with a mind-map to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it. We then created a Figma file that allowed us to build out wireframes of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.
                         </p>
@@ -276,7 +279,7 @@
                 Ultilizing the data we gathered from user tests, we were able to fine tune the app to become more user friendly and appealing.
             </h6>
             <div class="d-flex">
-                <div class="col-md-6 align-self-center">
+                <div class="col-md-6 align-self-center me-5">
                     <p class="">
                         We completed recorded user tests with <b>teachers</b>, hoping to <b>bridge their real life experience to improve the app.</b>
                         </br>
@@ -287,8 +290,7 @@
                         With addition suggestions, we added in certain features to help including a back button on every page, signing up for a new account bringing you straight to the home page, and turning student grades and participation records from multiple pages into one expanded list. 
                     </p>
                 </div>
-                <div class="col-md-1"></div>
-                <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5">
+                <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5 ps-5">
             </div>
         </div>
     </div>
@@ -305,7 +307,7 @@
                         <h6 class="playFair mb-5">
                             We discovered that choosing tablets as our main platform were challenging due to the spacing constraint.
                         </h6>
-                        <div class="col-sm-0 col-md-8 pb-5">
+                        <div class="col-md-9 pb-5 mx-auto">
                             <p>
                                 With more iterations, this app would be constantly evolving to keep up with teacher needs.
                                 </br>
@@ -321,7 +323,7 @@
                 <h6 class="leadingLine text-nav text-muted my-5">
                     Final Prototype
                 </h6>
-                <div class="row col-auto">
+                <div class="row col-md-9 mx-auto">
                     <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FnUEYbO1wOan5CCSdQBM0TY%2FLD_Virtual-Teaching-App%3Fnode-id%3D266%253A12823%26scaling%3Dscale-down%26page-id%3D266%253A10984%26starting-point-node-id%3D266%253A12823" allowfullscreen></iframe>
                 </div>
             </div>
