Setting up for illustration gallery

--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -193,7 +193,7 @@
                     In the research process, each team member conducted at least one interview with potential user to get the first insights.
                 </h6>
                 <div class="row d-flex">
-                    <div class="col-11 col-md-9 mx-md-auto mx-sm-0">
+                    <div class="col-md-9 mx-md-auto mx-sm-0">
                         <p>
                             Through the <b>5 interviews</b>, we could understand their behaviors, opinions, past experiences, and suggestions for potential organizations. We prepared questions strategically divided into warm up questions, past experiences, and suggestions for organizations.
                             <br>
@@ -271,7 +271,7 @@
             </h6>
             <div class="d-flex pt-3 pb-5">
                 <div class="row col-md-7 pe-md-5 mx-auto">
-                    <p class="ps-0">
+                    <p class="px-0">
                         We pin-point few of the problems as priorities.
                         <br>
                         <br>
@@ -318,7 +318,7 @@
             <div class="row col-10 my-5 mx-auto d-none d-sm-block d-md-none">
                 <img src="../assets/img/UX_AFA/UX_AFA_workflowMid.svg" alt="">
             </div>
-            <div class="justify-content-center my-5 col-10 mx-auto d-block d-sm-none">
+            <div class="justify-content-center my-5 mx-auto d-block d-sm-none">
                 <h6 class="text-decoration-underline">1. Mind Map:</h6>
                 <p class="ps-4 pb-3">Re-mapping the content</p>
                 <h6 class="text-decoration-underline">2. User Flow:</h6>
@@ -447,7 +447,7 @@
                 Interations
             </h6>
             <div class="row col-md-11 mx-auto">
-                <div class="col-11 col-md-6">
+                <div class="col-md-6 px-0">
                     <h6>Desktop Iterations</h6>
                     <ul class="text-decoration-none mt-3 mb-5 mb-md-0">
                         <li>Overlay colors now better match the website&apos;s mood.</li>
@@ -459,7 +459,7 @@
                         <li>Unify the color theme to match the original website</li>
                     </ul>
                 </div>
-                <div class="col-11 col-md-6">
+                <div class="col-md-6 px-0">
                     <h6>Mobile Iterations</h6>
                     <ul class="text-decoration-none mt-3">
                         <li>Less wordy.</li>
