--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -279,7 +279,7 @@
                 Ultilizing the data we gathered from user tests, we were able to fine tune the app to become more user friendly and appealing.
             </h6>
             <div class="d-flex">
-                <div class="col-md-6 align-self-center me-5">
+                <div class="col-md-6 align-self-center me-md-5">
                     <p class="">
                         We completed recorded user tests with <b>teachers</b>, hoping to <b>bridge their real life experience to improve the app.</b>
                         </br>
