--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
 
 <!-- ########################################################################################################### -->
 
-<body class="aboutPage">
+<body class="aboutMe">
     <!-- Google Tag Manager (noscript) -->
     <noscript>
         <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WVDNXQD" height="0" width="0" style="display:none;visibility:hidden"></iframe>
@@ -43,7 +43,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="../index.html">LD</a>
+            <a class="navbar-brand" href="./index.html">LD</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
@@ -93,22 +93,133 @@
     </nav>
     <!-- Masthead-->
     <header class="hero-section">
-            <div class="d-flex">
-                <h1 class="my-0 mb-9 fadeIn-1 aboutMeTag pb-5">
-                    3D/Product Designer <br> based in Orlando, Florida.
-                </h1>
+            <div class="d-flex row aboutMeTitle">
+                <h1 class="fadeIn-1">3D/Product Designer</h1>
+                <h1 class="fadeIn-2">based in Orlando, Florida.</h1>
             </div>
     </header>
 
-    <div class="offwhite testEmpty">
-        hello testing
-    </div>
+    <!-- Biography -->
+    <section class="">
+        <div class="container d-flex aboutMeIntro">
+            <div class="row col-md-10 mx-auto">
+                <div class="col-md-5 mb-4">
+                    <h1>Hello!</h1>
+                    <h1>My name is <span style="font-weight: 600;">Leon</span></h1>
+                </div>
+                <div class="col-md-7 ps-3 pt-1">
+                    <h5 class="mb-4 fw-normal">a designer, artist, developer, and behaviorial researcher hoping to further my career in the design space.</h5>
+                    <h5 class="mb-4 fw-normal">I'm a designer focused on Product and Brand, with a healthy addiction to animation and visual design. My goal is to create simple, beautiful, and accessible interfaces and interactions.</h5>
+                    <h5 class="fw-normal">I am also a gamer, comic maniac, and a computer tech nerd who spends too much time collecting Criterion dvds, old school Kung Fu vhs tapes, and anything Disney related.</h5>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Experience -->
+    <section class="container aboutMeXP">
+        <div class="d-flex row col-md-10 mx-auto">
+            <div class="col-md-7">
+                <!-- Education -->
+                <h6 class="playFair mb-5">Education</h6>
+                <h5 class="lato pt-3">Full Sail University</h5>
+                <p class="lato pb-4">Bachelor of Science - Computer Animation</p>
+                <h5 class="lato">University of Central Florida</h5>
+                <p class="lato pb-4">UX/UI Design Certification</p>
+                <h5 class="lato">FARO Training</h5>
+                <p class="lato pb-4">Training Certification</p>
+                <h5 class="lato">Photomodeler Technologies</h5>
+                <p class="lato pb-4">Training Certification</p>
+
+                <!-- Experience -->
+                <h6 class="playFair my-5 pt-5">Experience</h6>
+                <h5 class="lato pt-3">Huntington Ingalls Industries</h5>
+                <p class="lato pb-4">3D Techinical Artist &nbsp; &#x2022; &nbsp; Apr 2019 - Present</p>
+                <h5 class="lato">Corys Thunder</h5>
+                <p class="lato pb-4">3D Techinical Artist &nbsp; &#x2022; &nbsp; Sep 2015 - Apr 2019</p>
+                <h5 class="lato">Delta V Engineering</h5>
+                <p class="lato pb-4">Junior Animator/Multimedia Specialist &nbsp; &#x2022; &nbsp; May 2013 - May 2015</p>
+            </div>
+
+            <!-- Skills -->
+            <div class="col-md-5 ps-md-5 mt-5 mt-md-0 pt-5 pt-md-0">
+                <h6 class="playFair mb-5">Skill</h6>
+                <!-- General -->
+                <h5 class="lato py-3">General</h5>
+                <div class="aboutMeTag lato">
+                    <p>UX/UI</p>
+                    <p>Product Design</p>
+                    <p>User Research</p>
+                    <p>Rapid Prototyping</p>
+                    <p>Storyboarding</p>
+                    <p>Wireframing</p>
+                    <p>Usability Testing</p>
+                    <p>Branding</p>
+                    <p>Video Editing</p>
+                    <p>Compositing</p>
+                    <p>Point Cloud</p>
+                </div>
+
+                <!-- Design -->
+                <h5 class="lato pt-1 pb-3 mt-5">Design</h5>
+                <div class="aboutMeTag lato">
+                    <p>Adobe Creative Suite</p>
+                    <p>Sketch</p>
+                    <p>Figma</p>
+                    <p>Invision</p>
+                    <p>Keynote</p>
+                    <p>Miro</p>
+                    <p>Foundry Nuke</p>
+                </div>
+                
+                <!-- 3D Animation -->
+                <h5 class="lato pt-1 pb-3 mt-5">3D Animation</h5>
+                <div class="aboutMeTag lato">
+                    <p>Maya</p>
+                    <p>3DS Max</p>
+                    <p>Zbrush</p>
+                    <p>Cinema 4D</p>
+                    <p>AutoCAD</p>
+                    <p>Solidworks</p>
+                    <p>Fusion 360</p>
+                    <p>Autodesk Recap</p>
+                    <p>Substance</p>
+                </div>
+
+                <!-- Engineering -->
+                <h5 class="lato pt-1 pb-3 mt-5">Engineering</h5>
+                <div class="aboutMeTag lato">
+                    <p>HTML/CSS</p>
+                    <p>JavaScript</p>
+                    <p>Python</p>
+                    <p>Mel</p>
+                    <p>Unreal Engine</p>
+                    <p>Cry Engine</p>
+                    <p>Unity</p>
+                    <p>Roblox</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- End -->
+        <div class="aboutMeEnd row col-md-10 mx-auto">
+            <h5>Always down to collaborate when I have time.</h5>
+            <h5>Let's get in touch.</h5>
+            <div class="pt-4">
+                <a class="hvr-sweep UXCaseButton me-5" href="./assets/Dinh_Leon_Resume.pdf">Resume</a>
+                <a class="hvr-sweep UXCaseButton" href="mailto:leonx.dinh@gmail.com?subject = Portfolio = Message">Contact</a>
+            </div>
+        </div>
+
+    </section>
 
 
     <!-- Footer-->
-    <footer class="footer bg-transparent small text-center text-black-50">
-        <div class="container px-4 px-lg-5">
-            Copyright &copy; Leon Dinh 2022
+    <footer class="footer bg-transparent small text-black-50">
+        <div class="container px-4 px-lg-5 d-flex justify-content-center align-items-center gap-3">
+            <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
+            <a href="https://www.linkedin.com/in/leonxdinh/" class="socialIcon"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
+            <a href="https://github.com/kaider/Portfolio" class="socialIcon"> <img src="./assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
