--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -329,7 +329,7 @@
             </div>
         </div>
 
-        <div class="mb-sm-4 UXCaseSwap">
+        <div class="mb-sm-4 UXCaseSwap justify-content-end">
             <div class="pt-5 pt-sm-0">
                 <p>Next:</p>
                 <a class="hvr-sweep" href="./UX_TD.html">TreasuryDirect.gov</a>
@@ -338,9 +338,11 @@
     </section>
 
     <!-- Footer-->
-    <footer class="footer bg-transparent small text-center text-black-50">
-        <div class="container px-4 px-lg-5">
-            Copyright &copy; Leon Dinh 2022
+    <footer class="footer bg-transparent small text-black-50">
+        <div class="container px-4 px-lg-5 d-flex justify-content-center align-items-center gap-3">
+            <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
+            <a href="https://www.linkedin.com/in/leonxdinh/" class="socialIcon"> <img src="../assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
+            <a href="https://github.com/kaider/Portfolio" class="socialIcon"> <img src="../assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
