--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                             <h4 class="UXCaseTitle">Virtual Teaching Platform</h4>
                             <p class="text-black-50 mb-sm-4">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs...</p>
                             <div class="UXCaseLabel mb-sm-4">
-                                <p class="UXCaseTag">UX/UI</p>
-                                <p class="UXCaseTag">Design System</p>
-                                <p class="UXCaseTag">Mobile App</p>
-                                <p class="UXCaseTag">Figma</p>
+                                <p>UX/UI</p>
+                                <p>Design System</p>
+                                <p>Mobile App</p>
+                                <p>Figma</p>
                             </div>
                             <a class="hvr-sweep UXCaseButton" href="./CaseStudies/UX_VTP.html">View Case Study</a>
                         </div>
@@ -138,10 +138,10 @@
                             <h4 class="UXCaseTitle">TreasuryDirect.gov</h4>
                             <p class="text-black-50 mb-sm-4">This government site needed an overhaul on how they organize their information and updated layout to help them come into the modern age while still remaining functional.</p>
                             <div class="UXCaseLabel mb-sm-4">
-                                <p class="UXCaseTag">UX/UI</p>
-                                <p class="UXCaseTag">Redesign</p>
-                                <p class="UXCaseTag">Desktop</p>
-                                <p class="UXCaseTag">Mobile</p>
+                                <p>UX/UI</p>
+                                <p>Redesign</p>
+                                <p>Desktop</p>
+                                <p>Mobile</p>
                             </div>
                             <a class="hvr-sweep UXCaseButton" href="./CaseStudies/UX_TD.html">View Case Study</a>
                         </div>
@@ -164,10 +164,10 @@
                             <h4 class="UXCaseTitle">ArtsForAll.com</h4>
                             <p class="text-black-50 mb-sm-4">Non-profit organization that offers accessible artistic opportunities to children in the New York City area who face socio-economic, physical, or emotional barriers to exploring the arts.</p>
                             <div class="UXCaseLabel mb-sm-4">
-                                <p class="UXCaseTag">UX/UI</p>
-                                <p class="UXCaseTag">Design System</p>
-                                <p class="UXCaseTag">Figma</p>
-                                <p class="UXCaseTag">Illustrator</p>
+                                <p>UX/UI</p>
+                                <p>Design System</p>
+                                <p>Figma</p>
+                                <p>Illustrator</p>
                             </div>
                             <a class="hvr-sweep UXCaseButton" href="./CaseStudies/UX_AFA.html">View Case Study</a>
                         </div>
@@ -180,10 +180,10 @@
                             <h4 class="UXCaseTitle">Odysseia</h4>
                             <p class="text-black-50 mb-sm-4">A traveling app to help users enjoy their vacation while staying safe from Covid, by providing real time updates of health and safety requirements.</p>
                             <div class="UXCaseLabel mb-sm-4">
-                                <p class="UXCaseTag">UX</p>
-                                <p class="UXCaseTag">Research</p>
-                                <p class="UXCaseTag">Design System</p>
-                                <p class="UXCaseTag">Mobile App</p>
+                                <p>UX</p>
+                                <p>Research</p>
+                                <p>Design System</p>
+                                <p>Mobile App</p>
                             </div>
                             <a class="hvr-sweep UXCaseButton" href="">View Case Study</a>
                         </div>
@@ -198,30 +198,12 @@
             </div>
         </section>
 
-        <!-- <section class="text-start" id="about">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-start">
-                    <div class="">
-                        <p class="leadingLine text-nav text-muted mb-lg-6">
-                            About Me </p>
-                        <h2 class="text-black mb-5 col-lg-auto aboutMeTag">3D/Product Designer based in Orlando, Florida.</h2>
-
-                        <p class="aboutMeBody mb-3 col-lg-7">a designer, artist, developer, and behaviorial researcher hoping to further my career in the design space.</p>
-
-                        <p class="aboutMeBody mb-3 col-lg-7">I'm a designer focused on Product and Brand, with an unhealthy addiction to animation and visual arts. My goal is to create simple, beautiful, and accessible interfaces and interactions.</p>
-
-                        <p class="aboutMeBody mb-3 col-lg-7">I am also a gamer, comic maniac, and a computer tech nerd who spends too much time collecting Criterion dvds, old school Kung Fu vhs tapes, and anything Disney related.</p>
-                    </div>
-                </div>
-                <a class="hvr-sweep mb-lg-5" href="">More Information</a>
-
-            </div>
-        </section> -->
-
         <!-- Footer-->
-        <footer class="footer bg-transparent small text-center text-black-50">
-            <div class="container px-4 px-lg-5">
-                Copyright &copy; Leon Dinh 2022
+        <footer class="footer bg-transparent small text-black-50">
+            <div class="container px-4 px-lg-5 d-flex justify-content-center align-items-center gap-3">
+                <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
+                <a href="https://www.linkedin.com/in/leonxdinh/" class="socialIcon"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
+                <a href="https://github.com/kaider/Portfolio" class="socialIcon"> <img src="./assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
             </div>
         </footer>
 
