--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -74,8 +74,8 @@
                                 <div class="col-md-5 order-0 order-md-1">
                                     <ul class="list-unstyled">
                                         <li class="followingLine dropDownCat">Others</li>
-                                        <li><a class="dropdown-item" href="#">Illustrations</a></li>
-                                        <li><a class="dropdown-item" href="#">3D Assets</a></li>
+                                        <li><a class="dropdown-item" href="../index.html#projects">UX Case studies</a></li>
+                                        <li><a class="dropdown-item" href="../index.html#illustrations">Illustrations</a></li>
                                     </ul>
                                 </div>
                             </div>
