--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
         <title>Leon Dinh - Product Designer</title>
-        <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="./assets/favicon2.ico" />
 
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -203,6 +203,9 @@
         <!-- Illustration -->
         <section id="illustrations">
             <div class="container px-4 px-lg-5">
+                <h6 class="leadingLine text-nav text-muted mb-5 pb-5 pb-lg-0 mb-lg-6">
+                    Illustrations
+                </h6>
                 <div class="row galleryMain">
                     <!-- Lo-fi Mobile -->
                     <h6 class="">Mobile Version</h6>
@@ -293,10 +296,12 @@
 
         <!-- Footer-->
         <footer class="footer bg-transparent small text-black-50">
-            <div class="container px-4 px-lg-5 d-flex justify-content-center align-items-center gap-3">
+            <div class="container px-4 px-lg-5 d-md-flex justify-content-center align-items-center">
                 <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
-                <a href="https://www.linkedin.com/in/leonxdinh/" class="socialIcon"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
-                <a href="https://github.com/kaider/Portfolio" class="socialIcon"> <img src="./assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
+                <div class="socialIcon">
+                    <a href="https://www.linkedin.com/in/leonxdinh/"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
+                    <a href="https://github.com/kaider/Portfolio"> <img src="./assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
+                </div>
             </div>
         </footer>
 
