filling out main gallery contents

--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -495,7 +495,7 @@
                     <h6 class="leadingLine text-nav text-muted my-5">
                         Final Prototypes
                     </h6>
-                    <div class="col-md-9 mx-auto">
+                    <div class="col-md-8 mx-auto my-5 py-4">
                         <div class="accordion accordion-flush" id="accordionFlush">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingOne">
@@ -542,6 +542,9 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-md-9 mx-auto">
+                        <img src="../assets/img/UX_AFA/UX_AFA_Hifi.png" alt="" class="img-fluid">
                     </div>
                 </div>
             </div>
