--- a/index.html
+++ b/index.html
@@ -208,43 +208,7 @@
                 </h6>
                 <div class="row">
                     <!-- Lo-fi Mobile -->
-                    <h6 class="pb-5 text-light text-opacity-75">2D illustrations</h6>
-                    <div class="container-fluid picturesMain2 mb-5">
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
-                            <img class="" src="./assets/img/Illustrations/Others/201710_SFMTA.png">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201708_MRS.png" data-caption="Utah Transit Authority">
-                            <img class="" src="./assets/img/Illustrations/Others/201708_MRS.png">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201802_MBTA.png" data-caption="Massachusetts Bay Transportation Authority">
-                            <img class="" src="./assets/img/Illustrations/Others/201802_MBTA.png">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201804_MIA.png" data-caption="Miami-Dade Transit">
-                            <img class="" src="./assets/img/Illustrations/Others/201804_MIA.png">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201603_Esher_imitation.jpg" data-caption="Escher Imitation">
-                            <img class="" src="./assets/img/Illustrations/Others/201603_Esher_imitation.jpg">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_main.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_main.jpg">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_01.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_01.jpg">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_02.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_02.jpg">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_03.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_03.jpg">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_04.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_04.jpg">
-                        </a>
-                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_old.jpg" data-caption="Psychedelic Bruce Lee">
-                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_old.jpg">
-                        </a>
-                    </div>
-                    <h6 class="py-5 text-light text-opacity-75">3D assets</h6>
+                    <h6 class="pb-5 text-light text-opacity-75">3D assets</h6>
                     <div class="container-fluid picturesMain3">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201901_AC_Ace1959_01_A.jpg" data-caption="1959 AC Ace">
                             <img class="" src="./assets/img/Illustrations/3D/201901_AC_Ace1959_01_A.jpg">
@@ -265,7 +229,7 @@
                             <img class="" src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_02.png">
                         </a>
                     </div>
-                    <div class="container-fluid picturesMain4">
+                    <div class="container-fluid picturesMain4 mb-5 pb-5">
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_AO.png" data-caption="2005 Aston Martin DB9">
                             <img class="" src="./assets/img/Illustrations/3D/201310_AstonMartin_DB9_2005_AO.png">
                         </a>
@@ -280,6 +244,12 @@
                         </a>
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_A.png" data-caption="Interior Design">
                             <img class="" src="./assets/img/Illustrations/3D/201606_Interior_A.png">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_C.png" data-caption="Interior Design">
+                            <img class="" src="./assets/img/Illustrations/3D/201606_Interior_C.png">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_D.png" data-caption="Interior Design">
+                            <img class="" src="./assets/img/Illustrations/3D/201606_Interior_D.png">
                         </a>
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201606_Interior_B.jpg" data-caption="Interior Design">
                             <img class="" src="./assets/img/Illustrations/3D/201606_Interior_B.jpg">
@@ -340,6 +310,42 @@
                         </a>
                         <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/3D/201805_Sample09.jpg" data-caption="Game Assets">
                             <img class="" src="./assets/img/Illustrations/3D/201805_Sample09.jpg">
+                        </a>
+                    </div>
+                    <h6 class="py-5 text-light text-opacity-75">2D illustrations</h6>
+                    <div class="container-fluid picturesMain2">
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201710_SFMTA.png" data-caption="San Francisco Municipal Transportation Agency">
+                            <img class="" src="./assets/img/Illustrations/Others/201710_SFMTA.png">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201708_MRS.png" data-caption="Utah Transit Authority">
+                            <img class="" src="./assets/img/Illustrations/Others/201708_MRS.png">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201802_MBTA.png" data-caption="Massachusetts Bay Transportation Authority">
+                            <img class="" src="./assets/img/Illustrations/Others/201802_MBTA.png">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201804_MIA.png" data-caption="Miami-Dade Transit">
+                            <img class="" src="./assets/img/Illustrations/Others/201804_MIA.png">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201603_Esher_imitation.jpg" data-caption="Escher Imitation">
+                            <img class="" src="./assets/img/Illustrations/Others/201603_Esher_imitation.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_main.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_main.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_01.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_01.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_02.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_02.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_03.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_03.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_00_04.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_00_04.jpg">
+                        </a>
+                        <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/Others/201502_Traditional_old.jpg" data-caption="Psychedelic Bruce Lee">
+                            <img class="" src="./assets/img/Illustrations/Others/201502_Traditional_old.jpg">
                         </a>
                     </div>
                 </div>
