footer links now open in new tab

--- a/About.html
+++ b/About.html
@@ -209,7 +209,7 @@
                 <h5>Always down to collaborate when I have time.</h5>
                 <h5>Let's get in touch.</h5>
                 <div class="pt-4">
-                    <a class="hvr-sweep UXCaseButton me-5" href="./assets/Dinh_Leon_Resume.pdf">Resume</a>
+                    <a class="hvr-sweep UXCaseButton me-5" href="./assets/Dinh_Leon_Resume.pdf" target="_blank">Resume</a>
                     <a class="hvr-sweep UXCaseButton" href="mailto:leonx.dinh@gmail.com?subject = Portfolio = Message">Contact</a>
                 </div>
             </div>
@@ -222,8 +222,8 @@
             <div class="container px-4 px-lg-5 d-md-flex justify-content-center align-items-center">
                 <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
                 <div class="socialIcon">
-                    <a href="https://www.linkedin.com/in/leonxdinh/"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
-                    <a href="https://github.com/kaider/Portfolio"> <img src="./assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
+                    <a href="https://www.linkedin.com/in/leonxdinh/" target="_blank"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
+                    <a href="https://github.com/kaider/Portfolio" target="_blank"> <img src="./assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
                 </div>
             </div>
         </footer>
