--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -345,8 +345,8 @@
             <div class="container px-4 px-lg-5 d-md-flex justify-content-center align-items-center">
                 <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
                 <div class="socialIcon">
-                    <a href="https://www.linkedin.com/in/leonxdinh/"> <img src="../assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
-                    <a href="https://github.com/kaider/Portfolio"> <img src="../assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
+                    <a href="https://www.linkedin.com/in/leonxdinh/" target="_blank"> <img src="../assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
+                    <a href="https://github.com/kaider/Portfolio" target="_blank"> <img src="../assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
                 </div>
             </div>
         </footer>
